--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Phoenix Demo</title>
+    <title>Face Capture</title>
     <script src="https://unpkg.com/lodash@4/lodash.min.js"></script>
     <script src="https://unpkg.com/lowdb@0.17/dist/low.min.js"></script>
     <script src="https://unpkg.com/lowdb@0.17/dist/LocalStorage.min.js"></script>
