--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <div class="msg_label" id="res_yaw"></div>
     <div class="msg_label" id="res_pitch"></div>
     <div class="msg_label" id="res_roll"></div>
-    <div class="msg_label" id="res_brisque"></div>
     <div class="msg_label" id="res_eyeDist"></div>
     <div class="msg_label" id="res_eyeClosed"></div>
     <div class="msg_label" id="res_mask"></div>
     <div class="msg_label" id="res_sunglass"></div>
     <div class="msg_label" id="res_leftEye"></div>
     <div class="msg_label" id="res_rightEye"></div>
-    <div class="msg_label" id="res_faceScore"></div>
-    <div class="msg_label" id="res_liveness"></div>
+    <div class="msg_label" id="res_brisque"></div>
+    <div class="msg_label" id="res_blurriness"></div>
+    <div class="msg_label" id="res_luminance"></div>
 
     <script type="text/javascript" src="main.js"></script>    
 </body>
