--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div id="cap_message">Please click to start</div>
     <div id="div_video">
       <video onloadedmetadata="onPlay(this)" id="inputVideo" autoplay muted playsinline></video>
-      <canvas id="capture"></canvas>
+      <!-- <canvas id="capture"></canvas>
       <img src="face_cover.png" id="face_cover"/>
       <canvas id="capture1"></canvas>
-      <canvas id="best_capture"></canvas>
+      <canvas id="best_capture"></canvas> -->
     </div>
 
     <div id="nav">
